# developer-platform

./: LICENSE  NEWS.md  README.md  setup-singularity-work-dir.py
.github/workflows/: docker-publish-and-test.yml  docker-publish.yml  upversion-pypi-package-and-send-pr.yml
docker/additional/: Dockerfile
docker/config/: Dockerfile  install_torchml_deps.sh  scratch.py
docker/config/excerpts/: compute.py  config.py  default-environment  kimcodes.py  kimobjects.py  kimquery.py  kimunits.py  local_search.py  (+4 more)
docker/git/: Dockerfile
docker/install/: Dockerfile
docker/publish/: Dockerfile
docker/publish-minimal/: Dockerfile
docker/publish-torchml/: Dockerfile
docker/sys/: Dockerfile
docker/test/: Dockerfile
docker/torchml/: Dockerfile
test/: run_all.sh  run_cg_example.sh  run_ecs.sh  run_tests.sh  run_vcs.sh
test/test_scripts_and_data/: all.grades  all.json  compare_dbs.py  compare_vcs.sh  custom.json  equilibriumcrystalstructure.json  pm_fast_tests.json  pm_fast_vcs.grades  set_up_and_run_all.sh  set_up_and_run_custom.sh  set_up_and_run_equilibriumcrystalstructure.sh  set_up_and_run_pm_fast_tests.sh  set_up_and_run_pm_fast_vcs.sh  set_up_and_run_sm_fast_tests.sh  set_up_and_run_sm_fast_vcs.sh  set_up_and_run_sp_sm_test.sh  set_up_and_run_surf.sh  sm_fast_tests.json  sm_fast_vcs.grades  sp_sm_test.json  surf.json
test/test_scripts_and_data/custom_kimitems/simulator-models/Sim_LAMMPS_MEAM_JelinekGrohHorstemeyer_2012_AlSiMgCuFe__SM_656517352485_000/: CMakeLists.txt  kimcite-SM_656517352485_000.bib  kimprovenance.edn  kimspec.edn  library.meam  smspec.edn
(+133 files in other folders)
